# clouderizer

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md
clouderizer-base-images/: .gitignore  buildimages.sh  pushimages.sh
clouderizer-base-images/hotstart-templates/: Dockerfile  entry.sh  index.html
clouderizer-cli/: fire_cli.py
clouderizer-cli/clouderizer/: buildspec.yaml  pyproject.toml  template.yaml
clouderizer-cli/clouderizer_beta/: codebuild.yaml  pyproject.toml
clouderizer-cli/clouderizer_beta/clouderizer_beta/: cldz_aws_lambda.py  globals.py  operator_this.py  template.yaml  utils.py
clouderizer-cli/clouderizer_beta/clouderizer_beta/dockerfiles/: PythonDockerfile
clouderizer-cli/clouderizer_beta/clouderizer_beta/templates/: codebuild_cloudformation_template.yaml
clouderizer-cli/clouderizer_beta/tests/: test_cldz_cli.py
clouderizer-core-functions/: .gitignore  bucket-cors.json  console-config.js  console-ingress.yaml  create-secrets.sh  stack.yml
clouderizer-core-functions/console/: .dockerignore  Dockerfile  launch.sh
clouderizer-core-functions/h2oparser/: .classpath  build.gradle
clouderizer-core-functions/h2oparser-copy/: .project  build.gradle
clouderizer-core-functions/pmmlparserbeta/: .project  build.gradle
clouderizer-docs/: Dockerfile  README.md  docs-ingress.yaml  mkdocs.yml  requirements.txt  s3releasecommand.txt  stack.yml
clouderizer-java-predictor/: .classpath  .project  Dockerfile  license.sig  pom.xml
clouderizer_setup/: console-config.js  console-ingress.yaml  letsencrypt-issuer.yaml  setup_openfaas_k8.sh
(+558 files in other folders)
